Homework_4_4 is done (with minor changes)